--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             align-items: center;
             flex-grow: 1;
             position: relative;
+            width: 100%;
+            height: 100%;
         }
         .flower {
             position: absolute;
