--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         }
         .grass {
             position: absolute;
-            width: 20px;
-            height: 10px;
+            width: 30px;
+            height: 15px;
             background: green;
             border-radius: 50%;
-            bottom: 0;
-            left: calc(50% - 10px);
+            bottom: -5px;
+            left: calc(50% - 15px);
         }
         #waterButton {
             padding: 10px 20px;
@@ -66,10 +66,6 @@
             from { transform: scale(1); opacity: 1; }
             to { transform: scale(5); opacity: 0; }
         }
-        @keyframes grow {
-            from { transform: scale(0); }
-            to { transform: scale(1); }
-        }
         .flower {
             transition: transform 0.5s ease-in-out;
         }
@@ -93,6 +89,11 @@
         let flowers = [];
         const garden = document.getElementById('garden');
 
+        function getRandomColor() {
+            const colors = ['#FF69B4', '#FF4500', '#FFD700', '#ADFF2F', '#00CED1', '#1E90FF', '#9370DB'];
+            return colors[Math.floor(Math.random() * colors.length)];
+        }
+
         function createFlower(x, y) {
             const flowerContainer = document.createElement('div');
             flowerContainer.style.position = 'absolute';
@@ -105,16 +106,18 @@
             flower.setAttribute('width', '100');
             flower.setAttribute('height', '100');
             
+            const petalColor = getRandomColor();
+
             flower.innerHTML = `
                 <line class="stem" x1="100" y1="200" x2="100" y2="150" stroke="green" stroke-width="2"/>
                 <ellipse class="leaf" cx="95" cy="170" rx="10" ry="4" fill="green" transform="rotate(-30 95 170)" style="opacity: 0;"/>
                 <ellipse class="leaf" cx="105" cy="170" rx="10" ry="4" fill="green" transform="rotate(30 105 170)" style="opacity: 0;"/>
-                <circle class="center" cx="100" cy="140" r="5" fill="yellow" style="opacity: 0;"/>
-                <circle class="petal" cx="100" cy="130" r="5" fill="white" style="opacity: 0;"/>
-                <circle class="petal" cx="90" cy="135" r="5" fill="white" style="opacity: 0;"/>
-                <circle class="petal" cx="110" cy="135" r="5" fill="white" style="opacity: 0;"/>
-                <circle class="petal" cx="95" cy="145" r="5" fill="white" style="opacity: 0;"/>
-                <circle class="petal" cx="105" cy="145" r="5" fill="white" style="opacity: 0;"/>
+                <circle class="center" cx="100" cy="140" r="10" fill="yellow" style="opacity: 0;"/>
+                <circle class="petal" cx="100" cy="120" r="20" fill="${petalColor}" style="opacity: 0;"/>
+                <circle class="petal" cx="70" cy="140" r="20" fill="${petalColor}" style="opacity: 0;"/>
+                <circle class="petal" cx="130" cy="140" r="20" fill="${petalColor}" style="opacity: 0;"/>
+                <circle class="petal" cx="85" cy="180" r="20" fill="${petalColor}" style="opacity: 0;"/>
+                <circle class="petal" cx="115" cy="180" r="20" fill="${petalColor}" style="opacity: 0;"/>
             `;
 
             const grass = document.createElement('div');
